--- a/E-Commerce-API/package.json
+++ b/E-Commerce-API/package.json
@@ -16,7 +16,10 @@
   "author": "CYF",
   "license": "CC-BY-4-0",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "postgresql": "^0.0.1"
   },
   "devDependencies": {
     "jest": "^27.2.5",
